--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node: [14]
+        node: [18]
 
     steps:
       - name: Checkout
@@ -81,7 +81,7 @@ jobs:
         if: success()
         env:
           HOST: connect.xsafe.io
-          USER: ubuntu
+          USER: graffino
 
           KEY: ${{secrets.MAINNET_SSH_KEY}}
           SSH_ARGS: ' -q -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
