fix: manifest PWA app name and mobile menu box-shadow

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,7 +18,7 @@
       "type": "image/png"
     }
   ],
-  "name": "Create React App Sample",
+  "name": "xSafe",
   "short_name": "xSafe",
   "start_url": ".",
   "theme_color": "#000000"
