--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest --coverage"
+    "testc": "vitest --coverage",
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -24,8 +25,8 @@
     "@mui/system": "^5.8.4",
     "@mui/x-data-grid": "^5.8.0",
     "@multiversx/sdk-core": "13.0.0",
-    "@multiversx/sdk-network-providers": "2.4.3",
     "@multiversx/sdk-dapp": "2.29.2",
+    "@multiversx/sdk-network-providers": "2.4.3",
     "@reduxjs/toolkit": "1.6.1",
     "@types/qrcode.react": "^1.0.2",
     "@types/styled-components": "^5.1.25",
@@ -73,19 +74,24 @@
   },
   "devDependencies": {
     "@popperjs/core": "^2.11.7",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "@vitest/coverage-c8": "^0.31.4",
+    "@vitest/coverage-v8": "^1.5.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jsdom": "^24.0.0",
     "typescript": "^5.4.2",
-    "vite": "^4.3.2",
+    "vite": "^5.2.9",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-mkcert": "^1.17.3",
-    "vitest": "^0.31.4"
+    "vitest": "^1.5.0"
   }
 }
