--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@multiversx/sdk-core": "13.0.0",
     "@multiversx/sdk-dapp": "2.29.2",
     "@multiversx/sdk-network-providers": "2.4.3",
+    "@pulsar.money/core": "^0.4.3",
     "@reduxjs/toolkit": "1.6.1",
     "@types/qrcode.react": "^1.0.2",
     "@types/styled-components": "^5.1.25",
