Make multi-wallet enabled by default and small refactors
- rename CI/CD job
- rename Organization to Safe
- rename Owner to Member
- remove socket subscription

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,4 +1,4 @@
-name: xsafe-deploy-staging
+name: xsafe-deploy-production
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
       - 'master'
 
 jobs:
-  deploy-staging:
+  deploy-production:
     runs-on: [ubuntu-latest]
     env:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
